--- a/views/orders/form.ejs
+++ b/views/orders/form.ejs
@@ -216,11 +216,11 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="timeZone">Business Divsion
+                  <label for="businessDivision">Business Divsion
                     <span style="color: rgb(206, 0, 0)">*</span>
                   </label>
                   <small class="form-text text-muted">Please choose the area business you are requesting for</small>
-                  <select required type="text" class="form-control" name="request[timeZone]" id="timeZone">
+                  <select required type="text" class="form-control" name="request[businessDivision]" id="businessDivision">
                     <option value="" disabled selected>
                       Select a division
                     </option>
