--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,8 +34,8 @@
           <a class="nav-link" href="/request/new">Form</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search Request" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" action="/request/search" method="post">
+        <input class="form-control mr-sm-2" type="search" name="requestId" placeholder="Search Request" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
       </ul>
