--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -21,7 +21,8 @@
 
   <div id="landing-header">
     <h1>Welcome to NBCUniversal TVP</h1>
-    <a href="/home" class="btn btn-lg btn-success">Enter</a>
+    <hr>
+    <a href="/home" class="btn btn-lg btn-success">Get Started</a>
   </div>
 
   <ul class="slideshow">
