--- a/views/web/home.ejs
+++ b/views/web/home.ejs
@@ -17,7 +17,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi,
           natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
         <p>
-          <a class="btn btn-primary btn-lg" href="/order">Search Request</a>
+          <a class="btn btn-primary btn-lg" href="#">Search Request</a>
         </p>
       </div>
       <div class="col-md-4">
