--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -49,6 +49,12 @@
           <span class="nav-link-text">Requests</span>
         </a>
       </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+          <a class="nav-link" href="tables.html">
+            <i class="fa fa-fw fa-file"></i>
+            <span class="nav-link-text">Report</span>
+          </a>
+        </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
         <a class="nav-link" href="/home">
           <i class="fa fa-fw fa-link"></i>
@@ -122,3 +128,18 @@
     </ul>
   </div>
 </nav>
+
+ <%if (success && success.length > 0) {%>
+  <div class="container">
+    <div class="alert alert-success">
+      <%= success %>
+    </div>
+  </div>
+  <%}%>
+  <%if (error && error.length > 0) {%>
+  <div class="container">
+    <div class="alert alert-danger">
+      <%= error %>
+    </div>
+  </div>
+  <%}%>
