--- a/views/web/home.ejs
+++ b/views/web/home.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-3">Welcome to TVP</h1>
-      <p class="lead">Welcome to our website</p>
+      <p class="lead">Welcome to our website and online request form</p>
       <hr class="my-4">
       <p>Click below to access our request form</p>
       <p class="lead">
