--- a/views/orders/form.ejs
+++ b/views/orders/form.ejs
@@ -116,28 +116,28 @@
           <span style="color: rgb(206, 0, 0)">*</span>
         </label>
         <div class="row form-row align-items-center">
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="macDesktop"></label>
-            <div class="input-group">
+            <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">Mac Desktop</div>
               <input required type="number" class="form-control" name="request[equipment][macDesktop]" id="macDesktop" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="macLaptop"></label>
-            <div class="input-group">
+            <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">Mac Laptop</div>
               <input required type="number" class="form-control" name="request[equipment][macLaptop]" id="macLaptop" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="pcDesktop"></label>
             <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">PC Desktop</div>
               <input required type="number" class="form-control" name="request[equipment][pcDesktop]" id="pcDesktop" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="pcLaptop"></label>
             <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">PC Laptop</div>
@@ -148,28 +148,28 @@
         <br>
         <!-- second row -->
         <div class="row form-row align-items-center">
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="printer"></label>
-            <div class="input-group">
+            <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">Printer</div>
               <input required type="number" class="form-control" name="request[equipment][printer]" id="printer" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="monitor"></label>
-            <div class="input-group">
+            <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">Monitor</div>
               <input required required type="number" class="form-control" name="request[equipment][monitor]" id="monitor" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="ipad"></label>
             <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">iPad</div>
               <input required required type="number" class="form-control" name="request[equipment][ipad]" id="ipad" value="0">
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-md-3">
             <label class="sr-only" for="tv"></label>
             <div class="input-group mb-2 mb-sm-0">
               <div class="input-group-addon">Television</div>
@@ -185,7 +185,7 @@
               <span style="color: rgb(206, 0, 0)">*</span>
             </label>
             <small class="form-text text-muted">Name of user - Equipment type - Additional information if necessary (seperate by new line)</small>
-            <textarea required type="tex" class="form-control" name="request[detail]" id="detail" placeholder="John Doe - MacBook Pro - Need to install Movie Magic "
+            <textarea required type="text" class="form-control" name="request[detail]" id="detail" placeholder="John Doe - MacBook Pro - Need to install Movie Magic "
               rows="8"></textarea>
           </div>
         </div>
