--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,6 +41,23 @@
       </ul>
     </div>
   </nav>
+  <br>
+
+ <%if (success && success.length > 0) {%>
+  <div class="container">
+    <div class="alert alert-success">
+      <%= success %>
+    </div>
+  </div>
+  <%}%>
+  <%if (error && error.length > 0) {%>
+  <div class="container">
+    <div class="alert alert-danger">
+      <%= error %>
+    </div>
+  </div>
+  <%}%>
+
   <!-- 
   <nav class="navbar navbar-default">
     <a class="navbar-brand" href="/home">
