--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -14,13 +14,14 @@
               <div class="card-body-icon">
                 <i class="fa fa-fw fa-shopping-cart"></i>
               </div>
-              <div class="mr-5">26 New Requests</div>
+              <div class="mr-5"><%= newToday %> New Requests</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="#">
+              <a class="card-footer text-white clearfix small z-1" href="/tvp-admin/requests/search/today">
               <span class="float-left">View Requests</span>
               <span class="float-right">
                 <i class="fa fa-angle-right"></i>
-              </span>
+              </a>
+            
             </a>
           </div>
         </div>
