--- a/views/admin/request.ejs
+++ b/views/admin/request.ejs
@@ -46,6 +46,7 @@
                   <option disabled selected><%= request.status %></option>
                   <option value="confirmed">confirmed</option>
                   <option value="shipped">shipped</option>
+                  <option value="delivered">delivered</option>
                 </select>
                 <br>
                 <button type="submit" class="btn btn-primary" style="margin-left: 35%" >Update</button>
