--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -8,7 +8,7 @@
         </li>
       </ol>
     <div class="row">
-      <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="col-xl-4 col-sm-4 mb-4">
           <div class="card text-white bg-primary o-hidden h-100">
             <div class="card-body">
               <div class="card-body-icon">
@@ -21,11 +21,10 @@
               <span class="float-right">
                 <i class="fa fa-angle-right"></i>
               </a>
-            
             </a>
           </div>
         </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="col-xl-4 col-sm-4 mb-4">
           <div class="card text-white bg-warning o-hidden h-100">
             <div class="card-body">
               <div class="card-body-icon">
@@ -41,7 +40,33 @@
             </a>
           </div>
         </div>
+                <div class="col-xl-4 col-sm-4 mb-4">
+          <div class="card text-white bg-danger o-hidden h-100">
+            <div class="card-body">
+              <div class="card-body-icon">
+                <i class="fa fa-fw fa-support"></i>
+              </div>
+              <div class="mr-5">0 Check Ups</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="#">
+              <span class="float-left">View Requests</span>
+              <span class="float-right">
+                <i class="fa fa-angle-right"></i>
+              </span>
+            </a>
+          </div>
+        </div>
     </div>
+
+    <div class="card mb-3">
+      <div class="card-header">
+        <i class="fa fa-area-chart"></i>Recent Requests</div>
+        <div class="card-body">
+          <canvas id="myAreaChart" width="100%" height="30"></canvas>
+        </div>
+        <div class="card-footer small text-muted">Updated on <%= now %></div>
+      </div>
+
     </div>
     <!-- ADMIN DEPENDENCIES -->
     <!-- Bootstrap core JavaScript-->
