--- a/views/admin/results.ejs
+++ b/views/admin/results.ejs
@@ -74,6 +74,7 @@
                           <option disabled selected><%= request.status %></option>
                           <option value="confirmed">confirmed</option>
                           <option value="shipped">shipped</option>
+                          <option value="delivered">delivered</option>
                         </select>
                         <hr>
                         <button type="submit" class="btn btn-primary" style="" >Update</button>
